--- a/PenguinChat/app/build.gradle
+++ b/PenguinChat/app/build.gradle
@@ -27,10 +27,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'com.google.firebase:firebase-messaging:9.0.2'
+    compile 'com.android.support:recyclerview-v7:24.0.0-beta1'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
